<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/mytoolbar"
        layout="@layout/toolbar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Views on the left side -->

    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="65dp"
        android:ems="8"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTaxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="300dp"
        android:text="@string/taxLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiscount" />

    <TextView
        android:id="@+id/tvSplitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="300dp"
        android:text="Split"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipAmountLabel"
        tools:ignore="HardcodedText" />


    <!--Views on the right side -->

    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="300dp"
        android:text="@string/totalLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaxLabel" />

    <TextView
        android:id="@+id/tvBaseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="300dp"
        android:text="@string/baseLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTaxAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTaxLabel"
        app:layout_constraintStart_toEndOf="@+id/tvTaxLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTaxLabel"
        tools:text="19.96" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="300dp"
        android:text="@string/tipLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalLabel" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalLabel"
        app:layout_constraintStart_toEndOf="@+id/tvTotalLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTotalLabel"
        tools:text="103.11" />

    <TextView
        android:id="@+id/tvTotalPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="22dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvPerPerson"
        app:layout_constraintStart_toEndOf="@+id/tvSplitLabel"
        app:layout_constraintTop_toBottomOf="@+id/etNumberPeople"
        tools:text="103.11" />

    <EditText
        android:id="@+id/etNumberPeople"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:hint="@string/_1"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvSplitLabel"
        app:layout_constraintStart_toEndOf="@+id/tvSplitLabel"
        app:layout_constraintTop_toTopOf="@+id/tvSplitLabel"
        tools:text="1" />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipLabel"
        app:layout_constraintStart_toStartOf="@+id/tvTotalAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTipLabel" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipAmountLabel"
        app:layout_constraintStart_toEndOf="@+id/tvTipLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTipAmountLabel"
        tools:text="19.96" />

    <TextView
        android:id="@+id/tvTipDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:text="Acceptable" />

    <TextView
        android:id="@+id/tvTipPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        app:layout_constraintVertical_bias="1.0"
        tools:text="24%" />

    <TextView
        android:id="@+id/tvPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/people"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/tvSplitLabel"
        app:layout_constraintStart_toEndOf="@+id/etNumberPeople"
        app:layout_constraintTop_toTopOf="@+id/tvSplitLabel" />


    <TextView
        android:id="@+id/tvPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/tvTotalPerson"
        app:layout_constraintTop_toBottomOf="@+id/tvPeople"
        tools:text="per person" />


    <!-- Footer -->

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/footer"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:entries="@array/CANProvinces"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="389dp"
        android:layout_marginStart="130dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTaxAmount"
        app:layout_constraintStart_toEndOf="@+id/tvTaxLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTaxAmount"
        app:srcCompat="@drawable/canflag" />

    <EditText
        android:id="@+id/etCustomTaxPercentage"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/hintAmount"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPercentSymbol2"
        app:layout_constraintStart_toEndOf="@+id/tvOr"
        app:layout_constraintTop_toTopOf="@+id/tvPercentSymbol2"
        app:layout_constraintVertical_bias="0.615" />

    <TextView
        android:id="@+id/tvPercentSymbol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/percentSymbol"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/etCustomTaxPercentage"
        app:layout_constraintTop_toBottomOf="@+id/tvTaxAmount" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/etCustomTaxPercentage"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/etCustomTaxPercentage" />

    <TextView
        android:id="@+id/tvDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="300dp"
        android:text="@string/discountLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBaseLabel" />

    <EditText
        android:id="@+id/etDiscount"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:hint="@string/hintAmount"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvDiscount"
        app:layout_constraintStart_toEndOf="@+id/tvDiscount"
        app:layout_constraintTop_toTopOf="@+id/tvDiscount"
        tools:text="20" />

    <TextView
        android:id="@+id/tvPercentSymbol1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/percentSymbol"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/etDiscount"
        app:layout_constraintStart_toEndOf="@+id/etDiscount"
        app:layout_constraintTop_toTopOf="@+id/etDiscount" />

    <TextView
        android:id="@+id/tvTipAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="300dp"
        android:text="@string/tipAmountLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>